src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Diaper_Tape_Side__c</fullName>
        <description>Which tape is affected?</description>
        <inlineHelpText>Which tape is affected?</inlineHelpText>
        <label>Diaper Tape Side</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dropped__c</fullName>
        <description>Has this (product) been dropped?</description>
        <inlineHelpText>Has this (product) been dropped?</inlineHelpText>
        <label>Dropped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dry_skin__c</fullName>
        <description>Do you typically have dry skin?</description>
        <inlineHelpText>Do you typically have dry skin?</inlineHelpText>
        <label>Dry skin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Female_Razor__c</fullName>
        <description>What razor handle are you using with this cartridge?</description>
        <inlineHelpText>What razor handle are you using with this cartridge?</inlineHelpText>
        <label>Female Razor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>SNAP</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit_Design_Leak__c</fullName>
        <description>Are you noticing anything related to the fit/design of the diaper that might be related to the leaking?</description>
        <inlineHelpText>Are you noticing anything related to the fit/design of the diaper that might be related to the leaking?</inlineHelpText>
        <label>Fit Design Leak</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foil_changed__c</fullName>
        <description>When did you last change the foil?</description>
        <inlineHelpText>When did you last change the foil?</inlineHelpText>
        <label>Foil changed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hair_condition__c</fullName>
        <description>What is the overall condition of your hair?</description>
        <inlineHelpText>What is the overall condition of your hair?</inlineHelpText>
        <label>Hair condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor/damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hair_type__c</fullName>
        <description>What is your hair type?</description>
        <inlineHelpText>What is your hair type?</inlineHelpText>
        <label>Hair type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Thick</fullName>
                </value>
                <value>
                    <fullName>Coarse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handle_Hot__c</fullName>
        <description>Is the handle of the unit hot to the touch?  If yes, is it uncomfortable to hold?</description>
        <inlineHelpText>Is the handle of the unit hot to the touch?  If yes, is it uncomfortable to hold?</inlineHelpText>
        <label>Handle Hot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Long_Wear_Pad__c</fullName>
        <description>How long do you generally wear a pad?</description>
        <inlineHelpText>How long do you generally wear a pad?</inlineHelpText>
        <label>How Long Wear Pad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 hours</fullName>
                </value>
                <value>
                    <fullName>3-6 hours</fullName>
                </value>
                <value>
                    <fullName>6-9 hours</fullName>
                </value>
                <value>
                    <fullName>9-12 hours</fullName>
                </value>
                <value>
                    <fullName>12+ hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_Pods__c</fullName>
        <description>How many pods did you use?</description>
        <inlineHelpText>How many pods did you use?</inlineHelpText>
        <label>How Many Pods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Stored__c</fullName>
        <description>Could you describe how and where the product was stored?</description>
        <inlineHelpText>Could you describe how and where the product was stored?</inlineHelpText>
        <label>How Stored</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leak_Location__c</fullName>
        <description>Where were the diapers leaking from?</description>
        <inlineHelpText>Where were the diapers leaking from?</inlineHelpText>
        <label>Leak Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On the front at waist</fullName>
                </value>
                <value>
                    <fullName>On the front at legs</fullName>
                </value>
                <value>
                    <fullName>On the back side at legs</fullName>
                </value>
                <value>
                    <fullName>On the back side at waist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Hair__c</fullName>
        <description>How long is your (or your customer&apos;s) hair?</description>
        <inlineHelpText>How long is your (or your customer&apos;s) hair?</inlineHelpText>
        <label>Length of Hair</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short (ear length or shorter)</fullName>
                </value>
                <value>
                    <fullName>Medium (between ear and shoulder)</fullName>
                </value>
                <value>
                    <fullName>Long (between shoulder and mid-back)</fullName>
                </value>
                <value>
                    <fullName>Very Long (waist or longer)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Size__c</fullName>
        <description>How big would you say your load size was?</description>
        <inlineHelpText>How big would you say your load size was?</inlineHelpText>
        <label>Load Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than half full</fullName>
                </value>
                <value>
                    <fullName>Half full</fullName>
                </value>
                <value>
                    <fullName>Around  ¾ full</fullName>
                </value>
                <value>
                    <fullName>Completely full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_done_per_week_del__c</fullName>
        <description>How many loads of wash do you do on an average week?</description>
        <inlineHelpText>How many loads of wash do you do on an average week?</inlineHelpText>
        <label>Load done per week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 3</fullName>
                </value>
                <value>
                    <fullName>4 to 7</fullName>
                </value>
                <value>
                    <fullName>8 to 10</fullName>
                </value>
                <value>
                    <fullName>more than 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lubrastrip__c</fullName>
        <description>Is your problem with the bottom or top Lubrication strip?</description>
        <inlineHelpText>Is your problem with the bottom or top Lubrication strip?</inlineHelpText>
        <label>Lubrastrip</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lubricate__c</fullName>
        <description>Do you lubricate the product?</description>
        <inlineHelpText>Do you lubricate the product?</inlineHelpText>
        <label>Lubricate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Male_Razor__c</fullName>
        <description>What razor handle are you using with this cartridge?</description>
        <inlineHelpText>What razor handle are you using with this cartridge?</inlineHelpText>
        <label>Male Razor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Flexball</fullName>
                </value>
                <value>
                    <fullName>Styler</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Underwear__c</fullName>
        <description>What type of material is the underwear that the product does not stick?</description>
        <inlineHelpText>What type of material is the underwear that the product does not stick?</inlineHelpText>
        <label>Material Underwear</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Synthetic</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metadata_Survey_Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Survey Trigger</label>
        <referenceTo>Metadata_Survey_Trigger__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_Up_A_Size__c</fullName>
        <description>Have you recently moved up a size (i.e. size 1 to a size 2)? If so, what is the main reason you started using a larger size for your child?</description>
        <inlineHelpText>Have you recently moved up a size (i.e. size 1 to a size 2)? If so, what is the main reason you started using a larger size for your child?</inlineHelpText>
        <label>Move Up A Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I did not move up a size</fullName>
                </value>
                <value>
                    <fullName>The previous size is not comfortable (too tight/too small)</fullName>
                </value>
                <value>
                    <fullName>Started to leak</fullName>
                </value>
                <value>
                    <fullName>Based on weight range indication on pack</fullName>
                </value>
                <value>
                    <fullName>I found a bigger diaper size on offer/ promo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natural_Color__c</fullName>
        <description>What is your (or customer&apos;s) natural hair color?</description>
        <inlineHelpText>What is your (or customer&apos;s) natural hair color?</inlineHelpText>
        <label>Natural Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>blonde-light</fullName>
                </value>
                <value>
                    <fullName>blonde-med</fullName>
                </value>
                <value>
                    <fullName>blonde-dark</fullName>
                </value>
                <value>
                    <fullName>brown-light</fullName>
                </value>
                <value>
                    <fullName>brown-med</fullName>
                </value>
                <value>
                    <fullName>brown-dark</fullName>
                </value>
                <value>
                    <fullName>black</fullName>
                </value>
                <value>
                    <fullName>redhead/auburn</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Authentic_Description__c</fullName>
        <description>What drives the belief that the product may not be authentic?</description>
        <inlineHelpText>What drives the belief that the product may not be authentic?</inlineHelpText>
        <label>Non-Authentic Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notch_Cut_Out__c</fullName>
        <description>If the product has wings, is there a notch cut-out in the center of the wings?</description>
        <inlineHelpText>If the product has wings, is there a notch cut-out in the center of the wings?</inlineHelpText>
        <label>Notch Cut Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Product not available / not sure</fullName>
                </value>
                <value>
                    <fullName>Product does not have wings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_Product_Not_Sticking__c</fullName>
        <description>When did you first notice the product was not sticking?</description>
        <inlineHelpText>When did you first notice the product was not sticking?</inlineHelpText>
        <label>Notice Product Not Sticking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upon Application</fullName>
                </value>
                <value>
                    <fullName>During Wear</fullName>
                </value>
                <value>
                    <fullName>During Removal</fullName>
                </value>
                <value>
                    <fullName>Other-Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occurrence_Date__c</fullName>
        <description>probing questions needed to capture security breach incidents</description>
        <inlineHelpText>When did this occur?</inlineHelpText>
        <label>Occurrence Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <description>Is this occurring when you take the product or is it a unusual smell from the package or both?</description>
        <inlineHelpText>Is this occurring when you take the product or is it a unusual smell from the package or both?</inlineHelpText>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>When Taken</fullName>
                </value>
                <value>
                    <fullName>From Package</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Purchase__c</fullName>
        <description>Additional probing questions needed to capture information about packaging shipped by online stores</description>
        <inlineHelpText>If purchased online, do you recall how the product was packaged when it arrived to your home?</inlineHelpText>
        <label>Online Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No packaging, just thrown into a box</fullName>
                </value>
                <value>
                    <fullName>Plastic bagged</fullName>
                </value>
                <value>
                    <fullName>Individually plastic bagged</fullName>
                </value>
                <value>
                    <fullName>Individually Bubble wrapped</fullName>
                </value>
                <value>
                    <fullName>Multiple product in one Bubble wrap</fullName>
                </value>
                <value>
                    <fullName>Individually shrink wrapped</fullName>
                </value>
                <value>
                    <fullName>Multiple product in one Shrink wrap</fullName>
                </value>
                <value>
                    <fullName>Tape over neck/nozzle/cap</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unable to respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Store__c</fullName>
        <description>If Online Store: capture URL, Vendor details, 
If Physical Store: capture address</description>
        <inlineHelpText>If Online Store: capture URL, Vendor details, 
If Physical Store: capture address</inlineHelpText>
        <label>Store Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Treatments__c</fullName>
        <description>What other treatments have been applied to the hair?</description>
        <inlineHelpText>What other treatments have been applied to the hair?</inlineHelpText>
        <label>Other Treatments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>All over lightening/bleach</fullName>
                </value>
                <value>
                    <fullName>Highlights</fullName>
                </value>
                <value>
                    <fullName>Perm</fullName>
                </value>
                <value>
                    <fullName>Relaxer</fullName>
                </value>
                <value>
                    <fullName>Straightener</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Treatments_when__c</fullName>
        <description>How long ago was the other treatment applied?</description>
        <inlineHelpText>How long ago was the other treatment applied?</inlineHelpText>
        <label>Other Treatments when</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 month</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>More than 6 months</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_shave_products__c</fullName>
        <description>If so, what brands and/or types (i.e. lotion, shave gels)?</description>
        <inlineHelpText>If so, what brands and/or types (i.e. lotion, shave gels)?</inlineHelpText>
        <label>Other shave products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pac_Answer_Questions__c</fullName>
        <description>Based on your experience, we would like to ask a few additional questions regarding your experience. Would you be willing to answer 6 quick questions?</description>
        <inlineHelpText>Based on your experience, we would like to ask a few additional questions regarding your experience. Would you be willing to answer 6 quick questions?</inlineHelpText>
        <label>Pac Answer Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_Dry_Hands__c</fullName>
        <description>Do you dry your hands before picking up a pac? (select one)</description>
        <inlineHelpText>Do you dry your hands before picking up a pac? (select one)</inlineHelpText>
        <label>Pac Dry Hands</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I always dry my hands thoroughly before picking up a pac</fullName>
                </value>
                <value>
                    <fullName>Usually but I sometime rinse dishes before picking up a pac</fullName>
                </value>
                <value>
                    <fullName>No, my hands are typically wet when I pick up a pac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_How_Many__c</fullName>
        <description>How many pacs were stuck together? (select one)</description>
        <inlineHelpText>How many pacs were stuck together? (select one)</inlineHelpText>
        <label>Pac How Many</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 small clump, made of up less than 5 pacs</fullName>
                </value>
                <value>
                    <fullName>1 large clump, made up of more than 5 pacs</fullName>
                </value>
                <value>
                    <fullName>Several small clumps, each made up of less than 5 pacs</fullName>
                </value>
                <value>
                    <fullName>Several large clumps, each made up of more than 5 pacs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_How_Stuck__c</fullName>
        <description>How are the pacs stuck together? (select one)</description>
        <inlineHelpText>How are the pacs stuck together? (select one)</inlineHelpText>
        <label>Pac How Stuck</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primarily powder-to-powder</fullName>
                </value>
                <value>
                    <fullName>Primarily liquid-to-liquid</fullName>
                </value>
                <value>
                    <fullName>Primarily liquid-to-powder</fullName>
                </value>
                <value>
                    <fullName>Mix of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_How_Used__c</fullName>
        <description>What did you do with the stuck-together pacs? (select one)</description>
        <inlineHelpText>What did you do with the stuck-together pacs? (select one)</inlineHelpText>
        <label>Pac How Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I used them as-is</fullName>
                </value>
                <value>
                    <fullName>I threw them away directly</fullName>
                </value>
                <value>
                    <fullName>I tried to separate them and used the ones I could separate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_Leak__c</fullName>
        <description>Have any of the pacs inside the bag/tub/container leaked? (select one)</description>
        <inlineHelpText>Have any of the pacs inside the bag/tub/container leaked? (select one)</inlineHelpText>
        <label>Pac Leak</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, powder leakage</fullName>
                </value>
                <value>
                    <fullName>Yes, liquid leakage</fullName>
                </value>
                <value>
                    <fullName>Yes, both powder and liquid leakage</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pac_Pull_Apart__c</fullName>
        <description>Did you try pulling the stuck-together pacs apart? (select one)</description>
        <inlineHelpText>Did you try pulling the stuck-together pacs apart? (select one)</inlineHelpText>
        <label>Pac Pull Apart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, they separated easily</fullName>
                </value>
                <value>
                    <fullName>Yes, and the film/pac got slightly damaged</fullName>
                </value>
                <value>
                    <fullName>Yes, and the pac burst completely</fullName>
                </value>
                <value>
                    <fullName>Yes, but I couldn’t separate them</fullName>
                </value>
                <value>
                    <fullName>No, I didn’t try</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Appearance__c</fullName>
        <description>Did the package appear to be damaged at purchase?</description>
        <inlineHelpText>Did the package appear to be damaged at purchase?</inlineHelpText>
        <label>Package Appearance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pad_Adhesive__c</fullName>
        <description>If product is available from the same package, look at the adhesive pattern on the back of the pad. Is the adhesive applied in two long stripes length-wise on the pad (like an airplane runway) OR is it applied in multiple short stripes across the pad (like a package bar code)?</description>
        <inlineHelpText>If product is available from the same package, look at adhesive pattern on back of pad. Is the adhesive applied in two long stripes length-wise on pad (like an airplane runway) OR is it applied in multiple short stripes across the pad (like a bar code)</inlineHelpText>
        <label>Pad Adhesive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 stripes (runway)</fullName>
                </value>
                <value>
                    <fullName>More than 2 stripes (bar code)</fullName>
                </value>
                <value>
                    <fullName>Product not available / not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Gray__c</fullName>
        <description>How much gray (what %) do you (or your customer) have?</description>
        <inlineHelpText>How much gray (what %) do you (or your customer) have?</inlineHelpText>
        <label>Percent Gray</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-50%</fullName>
                </value>
                <value>
                    <fullName>50-100%</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_in_Use__c</fullName>
        <description>How long was this product in use?</description>
        <inlineHelpText>How long was this product in use?</inlineHelpText>
        <label>Period in Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Placement_of_POD__c</fullName>
        <description>Where did you place the POD?</description>
        <inlineHelpText>Where did you place the POD?</inlineHelpText>
        <label>Placement of POD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On the bottom of the drum before placing the clothes</fullName>
                </value>
                <value>
                    <fullName>In the middle of the clothes</fullName>
                </value>
                <value>
                    <fullName>On top of the clothes</fullName>
                </value>
                <value>
                    <fullName>In the dispenser drawer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>